--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "swagger2api",
-  "version": "1.1.3",
+  "name": "swagger2apis",
+  "version": "1.0.5",
   "description": "swagger转api工具",
+  "type": "module",
   "keywords": [
     "swagger",
     "api"
@@ -11,7 +12,7 @@
     "url": "https://github.com/pandavips/swagger2api"
   },
   "homepage": "https://github.com/pandavips/swagger2api",
-  "main": "./dist/main.esm.js",
+  "main": "./dist/main.cjs.js",
   "module": "./dist/main.cjs.js",
   "types": "./dist/index.d.ts",
   "scripts": {
@@ -25,15 +26,22 @@
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
-    "rollup-plugin-babel": "^4.4.0",
     "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.4.0",
+    "rollup": "^2.78.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.4.0",
-    "typescript": "^4.8.2",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "rollup": "^2.78.1"
+    "@types/node": "^20.2.5",
+    "typescript": "^4.8.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^1.4.0",
+    "eta": "^2.2.0",
+    "mkdirp": "^3.0.1",
+    "pinyin": "2.11"
+  }
 }
