--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger2apis",
-  "version": "1.1.23",
+  "version": "1.1.26",
   "description": "swagger转api工具",
   "packageManager": "pnpm@7.1.0",
   "type": "module",
@@ -40,16 +40,16 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "rollup-plugin-copy": "^3.4.0"
   },
   "dependencies": {
-    "@rollup/plugin-json": "^6.0.0",
     "axios": "^1.4.0",
     "chalk": "^5.2.0",
     "eta": "^2.2.0",
     "mkdirp": "^3.0.1",
     "pinyin": "2.11",
-    "rollup-plugin-copy": "^3.4.0",
     "typescript": "^4.8.2"
   },
   "bugs": {
