--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.4.0",
     "@types/node": "^20.2.5",
     "rollup": "^2.78.1",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.0",
-    "@rollup/plugin-json": "^6.0.0",
-    "rollup-plugin-copy": "^3.4.0"
+    "tslib": "^2.4.1"
   },
   "dependencies": {
     "axios": "^1.4.0",
