--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {},
   "license": "ISC",
   "devDependencies": {
+    "@tsconfig/node16": "^16.1.1",
     "@types/node": "^20.8.0"
   },
   "bugs": {
