--- a/package.json
+++ b/package.json
@@ -1,27 +1,50 @@
 {
-  "packageManager": "pnpm@7.1.0",
-  "keywords": [
-    "swagger",
-    "api",
-    "panda-ext"
-  ],
-  "author": "pandavips",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pandavips/swagger2api"
-  },
-  "homepage": "https://github.com/pandavips/swagger2api",
-  "files": [
-    "dist"
-  ],
-  "scripts": {},
-  "license": "ISC",
-  "devDependencies": {
-    "@tsconfig/node16": "^16.1.1",
-    "@types/node": "^20.8.0"
-  },
-  "bugs": {
-    "url": "https://github.com/pandavips/swagger2api/issues",
-    "email": "919401990@qq.com"
-  }
+	"packageManager": "pnpm@7.1.0",
+	"keywords": [
+		"swagger",
+		"api",
+		"panda-ext"
+	],
+	"author": "pandavips",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/pandavips/swagger2api"
+	},
+	"homepage": "https://github.com/pandavips/swagger2api",
+	"files": [
+		"dist"
+	],
+	"scripts": {
+		"prepare": "husky install",
+		"cz": "cz",
+		"lint": "eslint ./packages/**/* --fix --ext .ts,.js,.json --max-warnings=0",
+		"format": "prettier --config .prettierrc --write packages/**/*"
+	},
+	"license": "ISC",
+	"devDependencies": {
+		"@tsconfig/node16": "^16.1.1",
+		"@types/node": "^20.8.0",
+		"@commitlint/cli": "^17.7.1",
+		"@commitlint/config-conventional": "^17.7.0",
+		"@typescript-eslint/eslint-plugin": "^6.6.0",
+		"@typescript-eslint/parser": "^6.6.0",
+		"commitizen": "^4.3.0",
+		"cz-conventional-changelog": "^3.3.0",
+		"eslint": "^8.48.0",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
+		"husky": "^8.0.3",
+		"lint-staged": "^14.0.1",
+		"prettier": "^3.0.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.2.2"
+	},
+	"bugs": {
+		"url": "https://github.com/pandavips/swagger2api/issues",
+		"email": "919401990@qq.com"
+	},
+	"dependencies": {
+		"axios": "^1.5.1",
+		"prettier": "^3.0.3"
+	}
 }
