--- a/packages/swagger2apis/package.json
+++ b/packages/swagger2apis/package.json
@@ -28,7 +28,7 @@
     "email": "919401990@qq.com"
   },
   "dependencies": {
-    "@swagger2apis/utils": "workspace:^",
+    "@panda/utils": "workspace:^",
     "eta": "^3.1.1"
   }
 }
