--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "type": "module",
-  "main": "./src/index.ts",
-  "module": "./src/index.ts",
+  "private": true,
+  "main": "./dist/src/index.js",
+  "module": "./dist/src/index.js",
+  "types": "./dist/src/*.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --project ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
-    "eta": "^3.1.1",
     "pinyin": "~2.11.2",
     "typescript": "^5.2.2"
   }
