--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,4 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    // "types": ["jest"],
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitAny": false,
-    "skipLibCheck": true
-  }
+  "extends": "./tsconfig.base.json",
+  "include": ["packages/*/src"]
 }
