--- a/package.json
+++ b/package.json
@@ -1,59 +1,57 @@
 {
-  "name": "swagger2apis",
-  "version": "1.1.26",
-  "description": "swagger转api工具",
   "packageManager": "pnpm@7.1.0",
-  "type": "module",
   "keywords": [
     "swagger",
-    "api"
+    "api",
+    "panda-ext"
   ],
+  "private": "true",
   "author": "pandavips",
   "repository": {
     "type": "git",
     "url": "https://github.com/pandavips/swagger2api"
   },
   "homepage": "https://github.com/pandavips/swagger2api",
-  "main": "./dist/main.esm.mjs",
-  "module": "./dist/main.esm.mjs",
-  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "test": "node ./example/index.mjs",
-    "build": "rollup -c",
-    "build-watch": "rollup -c --watch",
-    "prepare": "npm run build",
-    "publish": "npm publish"
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install",
+    "cz": "cz",
+    "lint:fix": "eslint ./packages/**/* --fix --ext .ts,.js,.json --max-warnings=0",
+    "format": "prettier --config .prettierrc --write packages/**/*",
+    "commitlint:run": "commitlint -e",
+    "lint-staged:run": "lint-staged",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "publish": "pnpm changeset publish"
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-typescript": "^7.18.6",
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.4.0",
-    "@types/node": "^20.2.5",
-    "rollup": "^2.78.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-dts": "^4.2.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.4.0",
-    "@rollup/plugin-json": "^6.0.0",
-    "rollup-plugin-copy": "^3.4.0"
-  },
-  "dependencies": {
-    "axios": "^1.4.0",
-    "chalk": "^5.2.0",
-    "eta": "^2.2.0",
-    "mkdirp": "^3.0.1",
-    "pinyin": "2.11",
-    "typescript": "^4.8.2"
+    "@changesets/cli": "^2.26.2",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@tsconfig/node16": "^16.1.1",
+    "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.6.0",
+    "@typescript-eslint/parser": "^6.6.0",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "bugs": {
     "url": "https://github.com/pandavips/swagger2api/issues",
     "email": "919401990@qq.com"
+  },
+  "dependencies": {
+    "axios": "^1.5.1"
   }
 }
